ingress/blog-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: blog-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - bytebot.xyz
      secretName: blog-cert-secret #secret created by cert-manager goes here
  rules:
  - host: bytebot.xyz 
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: blog-api-service
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-app-service
            port:
              number: 3000
